# prometheus-fastapi-instrumentator

./: .commitlintrc.yaml  .editorconfig  .flake8  .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .releaserc.json  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  LICENSE.txt  Makefile  README.md  RELEASE.md  Taskfile.yaml  codecov.yaml  commitlint.config.js  main.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-development.yml  ci-production.yml  ci.yaml  codeql-analysis.yml  codeql.yaml  commit.yml  docs.yml  lint-pr-title.yaml  pre-commit.yaml  primary.yaml  release-please.yaml  release-testpypi.yaml  release.yaml  release.yml  secondary.yaml  test-branches.yml  test-release.yml  testpypi.yaml  tests-and-checks.yaml
devel/: poetry.md  pre-commit.md  task.md
devel/examples/: README.md
devel/examples/default-metrics-diff-labels/: README.md  main.py
devel/examples/metrics-diff-port-uvicorn/: README.md  main.py
devel/examples/prom-multi-proc-gunicorn/: README.md  main.py
docs/: index.html  instrumentation.html  metrics.html
docs-internal/: README.md  faq.md  poetry.md  pre-commit.md  semantic-release.md
docs/devel/: README.md  please-release.md  poetry.md  pre-commit.md
docs/devel/assets/vscode-settings/: settings.json
docs/prometheus_fastapi_instrumentator/: index.html  metrics.html
html/prometheus_fastapi_instrumentator/: metrics.html
node/: README.md  package-lock.json  package.json
prometheus_fastapi_exporter/: __init__.py  exporter.py  middleware.py
prometheus_fastapi_instrumentator/: __init__.py  instrumentation.py  metrics.py  middleware.py
scripts/: base.sh  log.sh  main.sh  requirements.py  shellcheck.sh  shfmt.sh  test.sh
src/prometheus_fastapi_instrumentator/: __init__.py  const.py  instrumentation.py  metrics.py  middleware.py  routing.py  routing_iterative_py  routing_recursive_py
tests/: conftest.py  test_exporter.py  test_expose.py  test_instrumentation.py  test_instrumentation_expose.py  test_instrumentator_expose.py  test_instrumentator_include_router_big.py  test_instrumentator_include_router_small.py  test_instrumentator_included_router.py  test_instrumentator_mounted_apps.py  test_instrumentator_multiple_apps.py  test_instrumentator_multiproc.py  test_instrumentator_starlette.py  test_markers.py  test_metrics.py  test_middleware.py  test_non_default_metrics.py  test_prometheus_fastapi_exporter.py
tests/helpers/: utils.py
