[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "prometheus-fastapi-instrumentator"
version = "7.1.0"
description = "Instrument your FastAPI app with Prometheus metrics"
authors = [
    {name = "Tim Schwenke", email = "tim@trallnag.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "ISC" }
keywords = ["prometheus", "instrumentation", "fastapi", "exporter", "metrics"]
dependencies = [
    "starlette (>=0.30.0,<1.0.0)",
    "prometheus-client (>=0.8.0,<1.0.0)"
]

[project.urls]
homepage = 'https://github.com/trallnag/prometheus-fastapi-instrumentator'

[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
black = "^24.2.0"
flake8 = { version = "^7.0.0", python = ">=3.8.1" }
requests = "^2.31.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
rope = "^1.12.0"
isort = "^5.13.2"
mypy = "^1.9.0"
devtools = "^0.10.0"
asgiref = "^3.7.2"
uvicorn = ">=0.28.0"
gunicorn = "^21.2.0"
pytest-asyncio = ">=0.23.5.post1"
fastapi = "^0.110.0"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.mypy]
allow_redefinition = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
norecursedirs = "tests/helpers"
markers = ["slow: mark test as slow."]
asyncio_mode = "auto"
