[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "prometheus-fastapi-instrumentator"
version = "8.0.0"
description = "Instrument your FastAPI app with Prometheus metrics"
authors = [
    {name = "Tim Schwenke", email = "tim@trallnag.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "ISC" }
keywords = ["prometheus", "instrumentation", "fastapi", "exporter", "metrics"]
dependencies = [
    "starlette (>=1.0.0,<2.0.0)",
    "prometheus-client (>=0.8.0,<1.0.0)"
]

[project.urls]
homepage = 'https://github.com/trallnag/prometheus-fastapi-instrumentator'

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
flake8 = "^7.3.0"
requests = "^2.34.2"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
rope = "^1.14.0"
isort = "^8.0.1"
mypy = "^2.1.0"
devtools = "^0.12.2"
asgiref = "^3.11.1"
uvicorn = "^0.48.0"
gunicorn = "^26.0.0"
pytest-asyncio = "^1.4.0"
fastapi = "^0.137.2"
httpx2 = "^2.2.0"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.mypy]
allow_redefinition = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
norecursedirs = "tests/helpers"
markers = ["slow: mark test as slow."]
asyncio_mode = "auto"
